U: Integrate service add user and privilege permission role in page/ Add login feature/ Add Project management page for root admin

--- a/web/public/components/project/projects.scss
+++ b/web/public/components/project/projects.scss
@@ -1,5 +1,5 @@
-account {
-  ._table-layer {
+projects {
+._table-layer {
     width: 95%;
     margin: 0 auto;
   }
@@ -139,5 +139,4 @@ account {
 	}
 
 	.close:hover { background: #00d9ff; }
-
 }
